<resources>
    <string name="app_name">HáVagas</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="email">E-mail</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="receber_email">Desejo receber atualização de oportunidades por e-mail</string>
    <string name="ano_de_formatura">Ano de formatura</string>
    <string name="ano_de_conclusao">Ano de conclusão</string>
    <string name="formulario_de_cadastro">Formulário de cadastro</string>
    <string name="instituicao">Instituição</string>
    <string name="orientador">Orientador</string>
    <string name="titulo_da_monografia">Título da monografia</string>
    <string name="telefone">Telefone</string>
    <string name="cadastrar_telefone_celular">Deseja cadastrar telefone celular?</string>
    <string name="celular">Celular</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="vagas_de_interesse">Vagas de interesse</string>
    <string name="vagas_de_interesse_tv">Vagas de interesse</string>
    <string name="tipo_de_telefoneTv">Tipo de telefone:</string>
    <string name="comercialRb">Comercial</string>
    <string name="residencialRb">Residencial</string>


    <string-array name="formacao">
        <item>Formação</item>
        <item>Fundamental</item>
        <item>Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>