<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:padding="5dp"
            android:text="@string/formulario_de_cadastro"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textPersonName"
            android:hint="@string/nome_completo"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:inputType="textEmailAddress" />

        <CheckBox
            android:id="@+id/receberEmailCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/receber_email"/>

        <EditText
            android:id="@+id/telefoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:minHeight="48dp" />

        <Switch
            android:id="@+id/receberAtualizacaoSw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar_telefone_celular"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/celularEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/celular"
            android:minHeight="48dp"
            android:visibility="visible" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/feminino" />

            <RadioButton
                android:id="@+id/masculinoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/masculino" />
        </RadioGroup>

        <EditText
            android:id="@+id/dataNascimentoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_de_nascimento"
            android:minHeight="48dp"
            android:inputType="date" />

        <Spinner
            android:id="@+id/formacaoSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_margin="5dp"
            android:entries="@array/formacao" />

        <LinearLayout
            android:id="@+id/fundamentalMedioLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/anoFormaturaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/ano_de_formatura" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/graduacaoEspecializacaoLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/anoConclusaoGEEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/ano_de_conclusao" />

            <EditText
                android:id="@+id/InstituicaoGEEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instituicao" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mestradoDoutoradoLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/anoConclusaoMDEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/ano_de_conclusao" />

            <EditText
                android:id="@+id/instituicaoMDEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instituicao" />

            <EditText
                android:id="@+id/tituloMonografiaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo_da_monografia" />

            <EditText
                android:id="@+id/orientadorEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/orientador" />

        </LinearLayout>


        <EditText
            android:id="@+id/vagasDeInteresseEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/vagas_de_interesse"
            android:inputType="textMultiLine" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/limparBt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/limpar" />

            <Button
                android:id="@+id/salvarBt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:text="@string/salvar"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>